# mytestbot

./: .env.example  .gitignore  ARTIFACTS_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README_FULL.md  build.sh
