[package]
name = "polymarket-copy-bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "polymarket_copy_bot"
path = "src/lib.rs"

[[bin]]
name = "polymarket-bot"
path = "src/main.rs"

[[bin]]
name = "mempool-monitor"
path = "src/bin/mempool_monitor.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
tungstenite = "0.21"

# Crypto
ethers = { version = "2.0", features = ["ws"] }
hex = "0.4"

# Config
dotenv = "0.15"
config = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = "0.4"

# Channels
async-channel = "2.1"

[dev-dependencies]
mockall = "0.12"
